--- a/app/scss/theme.scss
+++ b/app/scss/theme.scss
@@ -4,6 +4,7 @@ $primary: #40ad4a;
 $secondary: #676767;
 $info: #008ba3;
 $warning: #e26e22;
+$green: #4B8140;
 
 // Fonts
 $font-family-base: 'Glober',
